Mon Apr  5 12:12:09 2004  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/socket.c (raise_socket_error): some platforms don't have
	  EAI_SYSTEM.

Mon Apr  5 08:18:23 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/rdoc.rb: Remove leading ./ from file names so that cross
	  references work properly.

Sun Apr  4 14:01:20 2004  Dave Thomas  <dave@pragprog.com>

	* lib/rdoc/options.rb (Options::parse): Allow multiple -x options to
	  RDoc. Fix bug where files weren't being excluded properly

Sat Apr  3 09:36:38 2004  why the lucky stiff  <why@ruby-lang.org>

	* ext/syck/syck.h: version 0.43.

Sat Apr  3 08:28:47 2004  why the lucky stiff  <why@ruby-lang.org>

	* ext/syck/lib/gram.c: allow root-level inline collections.
	  [ruby-talk:94922]

	* lib/yaml/rubytypes.rb (Symbol#to_yaml): emit symbols as implicits.
	  [ruby-talk:94930]

Fri Apr  2 19:28:48 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bcc32/Makefile.sub (OUTFLAG): needed for static-linked-ext.

Fri Apr  2 18:00:05 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb (extmake): extract necessary variables for static link
	  from Makefile.

	* lib/mkmf.rb (create_makefile): save preload and libpath for next
	  compile.

Fri Apr  2 17:27:17 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (top_include): include in the wrapped load is done for
	  the wrapper, not for a singleton class for wrapped main.
	  [ruby-dev:23305]

Fri Apr  2 15:13:44 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bignum.c (rb_big_eq): use temporary double variable to save the
	  result (internal float register may be bigger than 64 bits, for
	  example, 80 bits on x86).  [ruby-dev:23311]

Fri Apr  2 14:35:26 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (block_pass): should generate unique identifier of the
	  pushing block.  [ruby-talk:96363]

Fri Apr  2 11:36:20 2004  Minero Aoki  <aamine@loveruby.net>

	* eval.c (Init_load): make $LOADED_FEATURES built-in.
	  [ruby-dev:23299]
