@@ -1,3 +1,7 @@
+Mon Apr  5 19:39:10 2004  Kazuo Saito  <ksaito@uranus.dti.ne.jp>
+
+	* regparse.c, oniguruma.h: imported Oni Guruma 2.2.6.
+
 Mon Apr  5 12:12:09 2004  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* ext/socket/socket.c (raise_socket_error): some platforms don't have
